--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,8 +80,71 @@ a {
     color: #C0C0C0;
 }
 
+/*profile mobile first*/
+
+.profile {
+    text-align: center;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /*box-shadow: 5px 10px 0px 10px #C0C0C0;*/
+    border-bottom: 1px solid #DCDCDC;
 
 
+}
+.profile-title {
+    margin-bottom: 0.8rem;
+    line-height: 1.2;
+    letter-spacing: -0.06em;
+    color: #111111;
+    text-rendering: optimizeLegibility;
+    font-weight: normal;
+    font-size: 18px;
+}
+.profile-title {
+    margin-bottom: 0.8rem;
+    line-height: 1.2;
+    letter-spacing: -0.06em;
+    color: #111111;
+    text-rendering: optimizeLegibility;
+    font-weight: bold;
+    font-size: 24px;
+}
+.profile-title2 {
+    margin-bottom: 0.8rem;
+    margin-left: 5px;
+    line-height: 1.2;
+    letter-spacing: -0.06em;
+    color: #111111;
+    text-rendering: optimizeLegibility;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.profile-details {
+    display: none;
+/*    font-size: 14px;
+    line-height: 1.3;
+    max-width: 300px;
+    margin: 0 auto;*/
+    }
+.profile-details2 {
+    display: none;
+    /*    font-size: 14px;
+        line-height: 1.3;
+        max-width: 300px;
+        margin: 0 auto;*/
+}
+
+.face-img {
+    width: 180px;
+    height: 200px;
+    position: relative;
+
+
+
+}
 
 
 @media only screen and (max-width: 768px) {
@@ -97,32 +160,23 @@ a {
         transition: 0.3s;
         box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
     }
-
-
       .nav-menu.active {
         left: 0;
     }
-
     .nav-item {
         margin: 2.5rem 0;
     }
-
-
     .hamburger {
         display: block;
         cursor: pointer;
     }
-
 }
-
 .hamburger.active .bar:nth-child(2) {
     opacity: 0;
 }
-
 .hamburger.active .bar:nth-child(1) {
     transform: translateY(8px) rotate(45deg);
 }
-
 .hamburger.active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
 }
