--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,11 @@
 }
 
 html {
-    font-size: 62.5%;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Helvetica', sans-serif;
+}
+
+body {
+    background-color: #dddddd;
 }
 
 li {
@@ -55,6 +58,7 @@ a {
     justify-content: space-between;
     align-items: center;
     color: white;
+    z-index: 2;
 }
 
 .nav-item {
@@ -64,6 +68,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 60px;
 }
 
 .social-item {
@@ -80,28 +85,15 @@ a {
     color: #C0C0C0;
 }
 
-/*profile mobile first*/
-
 .profile {
     text-align: center;
     background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    /*box-shadow: 5px 10px 0px 10px #C0C0C0;*/
     border-bottom: 1px solid #DCDCDC;
-
-
 }
-.profile-title {
-    margin-bottom: 0.8rem;
-    line-height: 1.2;
-    letter-spacing: -0.06em;
-    color: #111111;
-    text-rendering: optimizeLegibility;
-    font-weight: normal;
-    font-size: 18px;
-}
+
 .profile-title {
     margin-bottom: 0.8rem;
     line-height: 1.2;
@@ -109,7 +101,7 @@ a {
     color: #111111;
     text-rendering: optimizeLegibility;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 5rem;
 }
 .profile-title2 {
     margin-bottom: 0.8rem;
@@ -119,32 +111,65 @@ a {
     color: #111111;
     text-rendering: optimizeLegibility;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 5rem;
+    text-align: left;
+}
+.profile-coder {
+    display:block;
 }
 
+.profile-entrepreneur {
+    display:block;
+}
 .profile-details {
-    display: none;
-/*    font-size: 14px;
+    font-size: 1rem;
     line-height: 1.3;
-    max-width: 300px;
-    margin: 0 auto;*/
+    max-width: 250px;
+    margin: 0 auto;
+    text-align: left;
+    color: grey;
+    overflow: auto;
     }
 .profile-details2 {
-    display: none;
-    /*    font-size: 14px;
-        line-height: 1.3;
-        max-width: 300px;
-        margin: 0 auto;*/
+    font-size: 1rem;
+    line-height: 1.3;
+    max-width: 300px;
+    margin: 0 auto;
+    text-align: left;
+    color: grey;
+    overflow: auto;
 }
 
 .face-img {
-    width: 180px;
-    height: 200px;
+    height: 600px;
     position: relative;
-
-
-
+    margin: 15px 50px 0 50px;
 }
+
+/*.header-center {
+    height: 1px;
+    background: #dddddd;
+    border-bottom: #ffffff solid 1px;
+    margin-bottom: 3.2rem;
+    position: relative;
+}
+.h3 {
+    background: #fafafa;
+    position: absolute;
+    top: -0.8rem;
+    left: 50%
+    margin-left: -160px;
+    width: 320px;
+    text-align: center;
+    display: block;
+    color: #777777;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: normal;
+    letter-spacing: 0.2rem;
+    padding: 0;
+
+}*/
 
 
 @media only screen and (max-width: 768px) {
@@ -181,3 +206,25 @@ a {
     transform: translateY(-8px) rotate(-45deg);
 }
 
+/*.profile-title {
+    font-size: 1.5rem;
+}
+
+.profile-title2 {
+    font-size: 1.5rem;
+}*/
+
+@media (min-width: 767px) {
+    /*.profile-details {
+        font-size: 14px;
+        line-height: 1.3;
+        max-width: 300px;
+        margin: 0 auto;
+    }
+    .profile-details2 {
+        font-size: 14px;
+        line-height: 1.3;
+        max-width: 300px;
+        margin: 0 auto;
+    }
+}
