--- a/assets/css/projectstyle.css
+++ b/assets/css/projectstyle.css
@@ -1,3 +1,4 @@
+/*general style*/
 * {
     margin: 0;
     padding: 0;
@@ -19,7 +20,7 @@ li {
 a {
     text-decoration: none;
 }
-
+/*navigation bar*/
 .header{
     border-bottom: 1px solid #E2E8F0;
 }
@@ -84,8 +85,8 @@ a {
 .nav-link:hover{
     color: #C0C0C0;
 }
-
-.profile {
+/*main section*/
+.projectintro {
     text-align: center;
     background-color: white;
     display: flex;
@@ -94,53 +95,44 @@ a {
     border-bottom: 1px solid #DCDCDC;
 }
 
-.profile-title {
-    margin-bottom: 0.8rem;
-    line-height: 1.2;
-    letter-spacing: -0.06em;
-    color: #111111;
-    text-rendering: optimizeLegibility;
-    font-weight: bold;
-    font-size: 5rem;
-}
-.profile-title2 {
-    margin-bottom: 0.8rem;
-    margin-left: 5px;
-    line-height: 1.2;
-    letter-spacing: -0.06em;
-    color: #111111;
-    text-rendering: optimizeLegibility;
-    font-weight: bold;
-    font-size: 5rem;
-    text-align: left;
-}
-.profile-coder {
+.intro {
     display:block;
 }
 
-.profile-entrepreneur {
-    display:block;
+.project-title {
+    margin-bottom: 0.8rem;
+    line-height: 1.2;
+    letter-spacing: -0.06em;
+    color: #111111;
+    text-rendering: optimizeLegibility;
+    font-weight: bold;
+    font-size: 5rem;
 }
-.profile-details {
-    font-size: 1.2rem;
-    line-height: 1.3;
-    max-width: 250px;
-    margin: 0 auto;
-    text-align: left;
-    color: #777777;
-    overflow: auto;
-    }
-.profile-details2 {
-    font-size: 1.2rem;
-    line-height: 1.3;
+
+.project-subtitle {
+    font-size: 1.5rem;
+    line-height: 1.7;
     max-width: 300px;
     margin: 0 auto;
     text-align: left;
     color: #777777;
     overflow: auto;
+    font-weight: normal;
+    margin-bottom: 0.8rem;
 }
 
-.face-img {
+.project-text {
+    font-size: 1rem;
+    line-height: 1.7;
+    max-width: 300px;
+    margin: 0 auto;
+    text-align: left;
+    color: #777777;
+    overflow: auto;
+    font-weight: normal;
+
+}
+.project-img {
     height: 600px;
     position: relative;
     margin: 15px 50px 0 50px;
@@ -154,33 +146,27 @@ a {
 
 }
 
-h3 {
+/*projects gallery*/
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(6,330px);
+}
+.grid-item {
     display: flex;
-    flex-direction: row;
-    background-color: white;
-    margin-top: 5rem;
-    color: #777777;
-    text-transform: uppercase;
-    font-size: 1rem;
-    font-weight: normal;
-    letter-spacing: 0.2rem;
+    align-items: center;
+    justify-content: center;
+    background-color: cornflowerblue;
+    border-radius: 4px;
+    transition: transform 0.3s ease-in-out;
+    border: solid 1px #777777;
 }
-h3:before, h3:after{
-    content: "";
-    flex: 1 1;
-    border-bottom: 1px solid;
-    margin: auto;
-
-}
-h3:before {
-    margin-right: 10px
-}
-h3:after {
-    margin-left: 10px
+.grid-item:hover {
+    filter:opacity(0.9);
+    transform: scale(1.04);
 }
 
 @media only screen and (max-width: 768px) {
-   .nav-menu {
+    .nav-menu {
         position: fixed;
         left: -100%;
         top: 5rem;
@@ -192,7 +178,7 @@ h3:after {
         transition: 0.3s;
         box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
     }
-      .nav-menu.active {
+    .nav-menu.active {
         left: 0;
     }
     .nav-item {
@@ -222,16 +208,16 @@ h3:after {
 }*/
 
 @media (min-width: 767px) {
-    /*.profile-details {
-        font-size: 14px;
-        line-height: 1.3;
-        max-width: 300px;
-        margin: 0 auto;
-    }
-    .profile-details2 {
-        font-size: 14px;
-        line-height: 1.3;
-        max-width: 300px;
-        margin: 0 auto;
-    }
+/*.profile-details {
+    font-size: 14px;
+    line-height: 1.3;
+    max-width: 300px;
+    margin: 0 auto;
+}
+.profile-details2 {
+    font-size: 14px;
+    line-height: 1.3;
+    max-width: 300px;
+    margin: 0 auto;
+}
 }
