--- a/assets/css/Sokjostyle.css
+++ b/assets/css/Sokjostyle.css
@@ -84,8 +84,100 @@ a {
 .nav-link:hover{
     color: #C0C0C0;
 }
+/*main Sokjo*/
+.Sokjoprojectintro {
+    text-align: center;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #DCDCDC;
+    padding: 8rem;
+}
+
+.sokjointro {
+    display:block;
+   }
+
+.sokjo-title {
+    margin-bottom: 0.8rem;
+    line-height: 1.2;
+    letter-spacing: -0.06em;
+    color: #111111;
+    text-rendering: optimizeLegibility;
+    font-weight: bold;
+    font-size: 5rem;
+}
+
+.sokjo-subtitle {
+    font-size: 1.5rem;
+    line-height: 1.7;
+    max-width: 300px;
+    text-align: left;
+    color: #777777;
+    overflow: auto;
+    font-weight: normal;
+    margin: 0 auto;
+}
+
+.sokjo-text {
+    font-size: 1rem;
+    line-height: 1.7;
+    max-width: 300px;
+    margin: 0 auto;
+    text-align: left;
+    color: #777777;
+    overflow: auto;
+    font-weight: normal;
+
+}
+.Sokjo-main-image {
+    height: 300px;
+    position: relative;
+    margin: 15px 50px 0 130px;
+}
+
+/*showroom*/
+.Sokjo-examples {
+    background-color: #fafafa;
+    margin-top: 5px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.Sokjo06 {
+    margin: 6rem auto 6.4rem auto;
+    display: block;
+    max-width: 100%;
+    height: auto;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
+}
+.textcontainer {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin-left: 15rem;
+    width: 50%;
+    line-height: 1.7;
 
 
+}
+.titleexamples {
+    margin-bottom: 0.8rem;
+    line-height: 1.2;
+    letter-spacing: -0.06em;
+    color: #111111;
+    text-rendering: optimizeLegibility;
+    font-weight: normal;
+    font-size: 3rem;
+}
+.textexamples {
+    font-size: 1.2rem;
+    font-weight: lighter;
+    letter-spacing: -0.06em;
+
+}
 /*footer*/
 
 #footer {
