--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,14 +149,15 @@ a {
 h3 {
     display: flex;
     flex-direction: row;
-    margin: 0.2rem 0 0 3rem;
+    margin: 0.2rem auto 0 auto;
     color: #757575;
     text-transform: uppercase;
     font-size: 0.9rem;
     font-weight: normal;
     letter-spacing: 0.2rem;
     padding-top: 5rem;
-    width: 92%;
+    width: 66rem
+
 }
 h3:before, h3:after{
     content: "";
@@ -164,12 +165,6 @@ h3:before, h3:after{
     border-bottom: 1px solid;
     margin: auto;
 
-}
-h3:before {
-   margin-right: 10px;
-}
-h3:after {
-    margin-left: 10px;
 }
 
 
@@ -216,6 +211,7 @@ h4{
     padding: 9px;
 }
 /*footer*/
+
 
 #footer {
     display: flex;
