--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -38,6 +38,8 @@ a {
     float: left;
     background-color: white;
     border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
 }
 .hamburger {
     display: none;
@@ -152,6 +154,7 @@ a {
 }
 
 /*footer*/
+
 
 #footer {
     display: flex;
