--- a/assets/css/projectstyle.css
+++ b/assets/css/projectstyle.css
@@ -39,6 +39,8 @@ a {
     float: left;
     background-color: white;
     border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
 }
 .hamburger {
     display: none;
