--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Mobile styles go first, without media queries. */
 * {
     margin: 0;
     padding: 0;
@@ -98,74 +99,44 @@ a {
 }
 
 .profile-title {
-    margin-bottom: 0.8rem;
-    line-height: 1.2;
-    letter-spacing: -0.06em;
-    color: #111111;
-    text-rendering: optimizeLegibility;
-    font-weight: bold;
-    font-size: 5rem;
+    display:none;
 }
 .profile-title2 {
-    margin-bottom: 0.8rem;
-    margin-left: 5px;
-    line-height: 1.2;
-    letter-spacing: -0.06em;
-    color: #111111;
-    text-rendering: optimizeLegibility;
-    font-weight: bold;
-    font-size: 5rem;
-    text-align: left;
+    display:none;
 }
 .profile-coder {
     display:block;
 }
 
 .profile-entrepreneur {
-    display:block;
+    display:none;
 }
 .profile-details {
-    font-size: 1.2rem;
-    line-height: 1.3;
-    max-width: 250px;
-    text-align: left;
-    color: #777777;
-    overflow: auto;
-    font-weight: lighter;
+    display: none;
     }
 .profile-details2 {
-    font-size: 1.2rem;
-    line-height: 1.3;
-    max-width: 300px;
-    text-align: left;
-    color: #777777;
-    overflow: auto;
-    font-weight: lighter;
+    display: none;
 }
 
 .face-img {
-    height: 600px;
+    height: 150px;
     position: relative;
     margin: 15px 50px 0 50px;
 }
 h3 {
     display: flex;
-    flex-direction: row;
     margin: 0.2rem auto 0 auto;
     color: #757575;
     text-transform: uppercase;
     font-size: 0.9rem;
     font-weight: normal;
     letter-spacing: 0.2rem;
-    padding-top: 5rem;
-    width: 66rem
+    padding-top: 1rem;
+
 
 }
 h3:before, h3:after{
-    content: "";
-    flex: 1 1;
-    border-bottom: 1px solid;
-    margin: auto;
+    display: none;
 
 }
 
@@ -175,13 +146,11 @@ h3:before, h3:after{
     background-color: #fafafa;
 }
 #thumbs {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
-    padding: 0 92px 100px 92px;
+    display: block;
     background-color: #fafafa;
     border-bottom: solid 1px #dddddd;
+    margin: auto;
+    padding-bottom: 3rem;
 }
 
 .works {
@@ -190,14 +159,16 @@ h3:before, h3:after{
     border-radius: 10px;
     transition: transform 0.3s ease-in-out;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    margin: 17px;
+    margin: 33px;
     opacity:1;
+    padding-bottom: 20px;
+    max-width: 250px;
 }
 
 .description {
-    color: black;
-    margin: 17px 17px;
-    font-weight: normal;
+    color: #808080;
+    margin: 1px 17px;
+    font-weight: lighter;
 }
 
 h4{
@@ -209,7 +180,7 @@ h4{
 }
 .photos {
     border-radius: 4%;
-    max-width:628px;
+    max-width:247px;
     padding: 9px;
 }
 /*footer*/
@@ -219,20 +190,14 @@ h4{
     border: none;
     border-radius: 50%;
     color: white;
-    cursor: pointer;
-    font-size: 16px;
     line-height: 5rem;
     width: 5rem;
-    box-shadow: 0 -1px 1px 0 #dddddd;
-    -webkit-transition: margin 0.5s ease-out;
+    box-shadow: 0 -1px 1px 0 #C0C0C0;
     -moz-transition: margin 0.5s ease-out;
-    -o-transition: margin 0.5s ease-out;
     font-size: 2rem;
     font-weight: bold;
     display: block;
     position: absolute;
-    left: 50%;
-    margin-left: -59px;
     margin-top: -6rem;
 
 }
@@ -244,7 +209,7 @@ cursor: pointer;
 
 #footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 1rem 8rem;
     background-color: #f5f5f5;
@@ -255,6 +220,7 @@ footer a {
     color: #777777;
     text-decoration: none;
     font-weight: 380;
+    margin-top: 25px;
 }
 .footer-nav-link{
     font-size: 1rem;
@@ -263,19 +229,15 @@ footer a {
 }
 
 .nav-menu-footer{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: blue;
-    z-index: 2;
+    display: none;
 }
 
 .nav-item-footer{
-    margin-left: 5rem;
+    display: none;
 }
 
 
-/* Mobile styles go first, without media queries. */
+
 
 @media only screen and (min-width: 321px) {
     /* Larger mobile styles (wider than 320 pixels) */
@@ -291,6 +253,281 @@ footer a {
 
 @media only screen and (min-width: 1140px) {
     /* Desktop styles (wider than 1140 pixels) */
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
+    html {
+        font-family: 'Helvetica', sans-serif;
+    }
+
+    body {
+        background-color: #dddddd;
+    }
+
+    li {
+        list-style: none;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    .header{
+        border-bottom: 1px solid #E2E8F0;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 1rem 8rem;
+        background-color: black;
+    }
+    .nav-logo {
+        background-repeat: no-repeat;
+        background-position: 0 -63px;
+        display: block;
+        float: left;
+        background-color: white;
+        border-radius: 50%;
+        margin-right: 11rem;
+        width: 3rem;
+        height: 3rem;
+    }
+    .hamburger {
+        display: none;
+    }
+
+    .bar {
+        display: block;
+        width: 30px;
+        height: 2px;
+        margin: 8px auto;
+        -webkit-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        background-color: #ffffff;
+    }
+
+    .nav-menu {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: white;
+        z-index: 2;
+    }
+
+    .nav-item {
+        margin-left: 5rem;
+    }
+    .nav-social {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 11rem;
+    }
+
+    .social-item {
+        margin-left: 1.5rem;
+    }
+
+    .nav-link{
+        font-size: 1.2rem;
+        font-weight: lighter;
+        color: #ffffff;
+    }
+
+    .nav-link:hover{
+        color: #C0C0C0;
+    }
+    /*main*/
+    .profile {
+        text-align: center;
+        background-color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-bottom: 1px solid #DCDCDC;
+    }
+
+    .profile-title {
+        margin-bottom: 0.8rem;
+        line-height: 1.2;
+        letter-spacing: -0.06em;
+        color: #111111;
+        text-rendering: optimizeLegibility;
+        font-weight: bold;
+        font-size: 5rem;
+    }
+    .profile-title2 {
+        margin-bottom: 0.8rem;
+        margin-left: 5px;
+        line-height: 1.2;
+        letter-spacing: -0.06em;
+        color: #111111;
+        text-rendering: optimizeLegibility;
+        font-weight: bold;
+        font-size: 5rem;
+        text-align: left;
+    }
+    .profile-coder {
+        display:block;
+    }
+
+    .profile-entrepreneur {
+        display:block;
+    }
+    .profile-details {
+        font-size: 1.2rem;
+        line-height: 1.3;
+        max-width: 250px;
+        text-align: left;
+        color: #777777;
+        overflow: auto;
+        font-weight: lighter;
+    }
+    .profile-details2 {
+        font-size: 1.2rem;
+        line-height: 1.3;
+        max-width: 300px;
+        text-align: left;
+        color: #777777;
+        overflow: auto;
+        font-weight: lighter;
+    }
+
+    .face-img {
+        height: 600px;
+        position: relative;
+        margin: 15px 50px 0 50px;
+    }
+    h3 {
+        display: flex;
+        flex-direction: row;
+        margin: 0.2rem auto 0 auto;
+        color: #757575;
+        text-transform: uppercase;
+        font-size: 0.9rem;
+        font-weight: normal;
+        letter-spacing: 0.2rem;
+        padding-top: 5rem;
+        width: 66rem
+
+    }
+    h3:before, h3:after{
+        content: "";
+        flex: 1 1;
+        border-bottom: 1px solid;
+        margin: auto;
+
+    }
+
+
+    /*latest projects*/
+    .gallery {
+        background-color: #fafafa;
+    }
+    #thumbs {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+        padding: 0 92px 100px 92px;
+        background-color: #fafafa;
+        border-bottom: solid 1px #dddddd;
+    }
+
+    .works {
+        display: block;
+        background-color: white;
+        border-radius: 10px;
+        transition: transform 0.3s ease-in-out;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        margin: 17px;
+        opacity:1;
+    }
+
+    .description {
+        color: black;
+        margin: 17px 17px;
+        font-weight: normal;
+    }
+
+    h4{
+        margin-bottom: 5px;
+    }
+    .grid-item:hover {
+        filter:opacity(0.9);
+        transform: scale(1.04);
+    }
+    .photos {
+        border-radius: 4%;
+        max-width:628px;
+        padding: 9px;
+    }
+    /*footer*/
+
+    #scrollToTopBtn {
+        background-color: #f5f5f5;
+        border: none;
+        border-radius: 50%;
+        color: white;
+        cursor: pointer;
+        font-size: 16px;
+        line-height: 5rem;
+        width: 5rem;
+        box-shadow: 0 -1px 1px 0 #C0C0C0;
+        -webkit-transition: margin 0.5s ease-out;
+        -moz-transition: margin 0.5s ease-out;
+        -o-transition: margin 0.5s ease-out;
+        font-size: 2rem;
+        font-weight: bold;
+        display: block;
+        position: absolute;
+        left: 50%;
+        margin-left: -59px;
+        margin-top: -6rem;
+
+    }
+    #scrollToTopBtn:hover {
+        cursor: pointer;
+        margin-bottom: 8px;
+    }
+
+
+    #footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem 8rem;
+        background-color: #f5f5f5;
+        margin-top: 2px;
+        height: 6rem;
+    }
+    footer a {
+        color: #777777;
+        text-decoration: none;
+        font-weight: 380;
+    }
+    .footer-nav-link{
+        font-size: 1rem;
+        font-weight: 380;
+        color: #777777;
+    }
+
+    .nav-menu-footer{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        color: blue;
+        z-index: 2;
+    }
+
+    .nav-item-footer{
+        margin-left: 5rem;
+    }
 }
 
 @media only screen and (max-width: 768px) {
