--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,259 +1,6 @@
 /* Mobile styles go first, without media queries. */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-family: 'Helvetica', sans-serif;
-}
-
-body {
-    background-color: #dddddd;
-}
-
-li {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-.header{
-    border-bottom: 1px solid #E2E8F0;
-}
-
-.navbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem 8rem;
-    background-color: black;
-}
-.nav-logo {
-    background-repeat: no-repeat;
-    background-position: 0 -63px;
-    display: block;
-    float: left;
-    background-color: white;
-    border-radius: 50%;
-    margin-right: 11rem;
-    width: 3rem;
-    height: 3rem;
-}
-.hamburger {
-    display: none;
-}
-
-.bar {
-    display: block;
-    width: 30px;
-    height: 2px;
-    margin: 8px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: #ffffff;
-}
-
-.nav-menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: white;
-    z-index: 2;
-}
-
-.nav-item {
-    margin-left: 5rem;
-}
-.nav-social {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 11rem;
-}
-
-.social-item {
-    margin-left: 1.5rem;
-}
-
-.nav-link{
-    font-size: 1.2rem;
-    font-weight: lighter;
-    color: #ffffff;
-}
-
-.nav-link:hover{
-    color: #C0C0C0;
-}
-/*main*/
-.profile {
-    text-align: center;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom: 1px solid #DCDCDC;
-}
-
-.profile-title {
-    display:none;
-}
-.profile-title2 {
-    display:none;
-}
-.profile-coder {
-    display:block;
-}
-
-.profile-entrepreneur {
-    display:none;
-}
-.profile-details {
-    display: none;
-    }
-.profile-details2 {
-    display: none;
-}
-
-.face-img {
-    height: 150px;
-    position: relative;
-    margin: 15px 50px 0 50px;
-}
-h3 {
-    display: flex;
-    margin: 0.2rem auto 0 auto;
-    color: #757575;
-    text-transform: uppercase;
-    font-size: 0.9rem;
-    font-weight: normal;
-    letter-spacing: 0.2rem;
-    padding-top: 1rem;
-
-
-}
-h3:before, h3:after{
-    display: none;
-
-}
-
-
-/*latest projects*/
-.gallery {
-    background-color: #fafafa;
-}
-#thumbs {
-    display: block;
-    background-color: #fafafa;
-    border-bottom: solid 1px #dddddd;
-    margin: auto;
-    padding-bottom: 3rem;
-}
-
-.works {
-    display: block;
-    background-color: white;
-    border-radius: 10px;
-    transition: transform 0.3s ease-in-out;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    margin: 33px;
-    opacity:1;
-    padding-bottom: 20px;
-    max-width: 250px;
-}
-
-.description {
-    color: #808080;
-    margin: 1px 17px;
-    font-weight: lighter;
-}
-
-h4{
-    margin-bottom: 5px;
-}
-.grid-item:hover {
-    filter:opacity(0.9);
-    transform: scale(1.04);
-}
-.photos {
-    border-radius: 4%;
-    max-width:247px;
-    padding: 9px;
-}
-/*footer*/
-
-#scrollToTopBtn {
-    background-color: #f5f5f5;
-    border: none;
-    border-radius: 50%;
-    color: white;
-    line-height: 5rem;
-    width: 5rem;
-    box-shadow: 0 -1px 1px 0 #C0C0C0;
-    -moz-transition: margin 0.5s ease-out;
-    font-size: 2rem;
-    font-weight: bold;
-    display: block;
-    position: absolute;
-    margin-top: -6rem;
-
-}
-#scrollToTopBtn:hover {
-cursor: pointer;
-    margin-bottom: 8px;
-}
-
-
-#footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem 8rem;
-    background-color: #f5f5f5;
-    margin-top: 2px;
-    height: 6rem;
-}
-footer a {
-    color: #777777;
-    text-decoration: none;
-    font-weight: 380;
-    margin-top: 25px;
-}
-.footer-nav-link{
-    font-size: 1rem;
-    font-weight: 380;
-    color: #777777;
-}
-
-.nav-menu-footer{
-    display: none;
-}
-
-.nav-item-footer{
-    display: none;
-}
-
-
-
-
-@media only screen and (min-width: 321px) {
-    /* Larger mobile styles (wider than 320 pixels) */
-}
-
-@media only screen and (min-width: 600px) {
-    /* Tablet styles (wider than 600 pixels) */
-}
-
-@media only screen and (min-width: 1024px) {
-    /* Large laptop styles (wider than 1024 pixels) */
-}
-
-@media only screen and (min-width: 1140px) {
     /* Desktop styles (wider than 1140 pixels) */
-    * {
+   * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
@@ -352,6 +99,7 @@ footer a {
         border-bottom: 1px solid #DCDCDC;
     }
 
+
     .profile-title {
         margin-bottom: 0.8rem;
         line-height: 1.2;
@@ -399,30 +147,30 @@ footer a {
     }
 
     .face-img {
-        height: 600px;
+        height: 35rem;
         position: relative;
         margin: 15px 50px 0 50px;
     }
     h3 {
         display: flex;
-        flex-direction: row;
-        margin: 0.2rem auto 0 auto;
+        margin: 5rem auto 0 auto;
         color: #757575;
         text-transform: uppercase;
         font-size: 0.9rem;
         font-weight: normal;
         letter-spacing: 0.2rem;
-        padding-top: 5rem;
-        width: 66rem
-
+        padding-top: 1rem;
+        /*width: 66rem*/
+        justify-content: center;
     }
-    h3:before, h3:after{
+
+      h3:before, h3:after{
         content: "";
         flex: 1 1;
         border-bottom: 1px solid;
         margin: auto;
 
-    }
+    }*/
 
 
     /*latest projects*/
@@ -434,9 +182,10 @@ footer a {
         justify-content: center;
         align-items: center;
         list-style: none;
-        padding: 0 92px 100px 92px;
+        padding: 8rem 92px 100px 92px;
         background-color: #fafafa;
         border-bottom: solid 1px #dddddd;
+        margin-top: -7rem;
     }
 
     .works {
@@ -528,62 +277,4 @@ footer a {
     .nav-item-footer{
         margin-left: 5rem;
     }
-}
 
-@media only screen and (max-width: 768px) {
-   .nav-menu {
-        position: fixed;
-        left: -100%;
-        top: 5rem;
-        flex-direction: column;
-        background-color: #222222;
-        width: 100%;
-        border-radius: 10px;
-        text-align: center;
-        transition: 0.3s;
-        box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
-    }
-      .nav-menu.active {
-        left: 0;
-    }
-    .nav-item {
-        margin: 2.5rem 0;
-    }
-    .hamburger {
-        display: block;
-        cursor: pointer;
-    }
-}
-
-.hamburger.active .bar:nth-child(2) {
-    opacity: 0;
-}
-.hamburger.active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-}
-.hamburger.active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-}
-
-/*.profile-title {
-    font-size: 1.5rem;
-}
-
-.profile-title2 {
-    font-size: 1.5rem;
-}*/
-
-@media (min-width: 767px){}
-    /*.profile-details {
-        font-size: 14px;
-        line-height: 1.3;
-        max-width: 300px;
-        margin: 0 auto;
-    }
-    .profile-details2 {
-        font-size: 14px;
-        line-height: 1.3;
-        max-width: 300px;
-        margin: 0 auto;
-    }
-}
